testsuite/tests/linear/should_fail/LinearConfusedDollar.stderr

LinearConfusedDollar.hs:12:7: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        arising from an application
    • In the expression: f $ x
      In an equation for ‘g’: g x = f $ x
